# booking-service/internal/http/router.go
@@ -5,8 +5,8 @@ import (
 	"booking-service/internal/http/middleware"
 	"booking-service/internal/service"
 
-	swagger "github.com/gofiber/swagger"
 	"github.com/gofiber/fiber/v2"
+	swagger "github.com/gofiber/swagger"
 )
 
 func NewRouter(app *fiber.App, bookingService service.BookingService, apiKey string) {
@@ -21,7 +21,6 @@ func NewRouter(app *fiber.App, bookingService service.BookingService, apiKey str
 
 	v1 := app.Group("/api/v1", middleware.APIKeyAuth(apiKey))
 	v1.Post("/bookings", bookingHandler.BookEvent)
-	v1.Delete("/bookings/:id", bookingHandler.CancelBooking)
-	v1.Get("/bookings/user/:userID", bookingHandler.GetUserBookings)
+	v1.Get("/bookings/user/:uid", bookingHandler.GetUserBookings)
 	v1.Get("/bookings/event/:eventID", bookingHandler.GetEventBookings)
 }
